Fixed product image position alignment was off fixed and set sign-up section in place continue tomorrow with content

--- a/index.scss
+++ b/index.scss
@@ -63,7 +63,7 @@ body {
     position: absolute;
     width: 916px;
     height: 534px;
-    left: 673px;
+    right: 24px;
     top: 8px;
     background-image: url('./images/food.png');
     background-repeat: no-repeat;
@@ -119,7 +119,8 @@ body {
 .c-sign-up {
     position: absolute;
     height: 341px;
-    top: 104px;
+    top: 114px;
+    width: 1440px;
     background-color: #00175A;
 }
 
